kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metadefender-menlo-deployment
spec:
  selector:
    matchLabels:
      app: metadefender-menlo
  replicas: 1
  template:
    metadata:
      labels:
        app: metadefender-menlo
    spec:
      containers:
      - name: "metadefender-menlo-integration"
        image: "<<middleware-container>>"
        livenessProbe:
          httpGet:
            path: /api/v1/health
            port: 3000
          initialDelaySeconds: 3
          periodSeconds: 10
