kubernetes/ingress-static-ip.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: metadefender-menlo-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "metadefender-menlo-static-ip"
spec:
  tls:
  - secretName: metadefender-menlo-secret-tls
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: metadefender-menlo-service
          servicePort: app-port
