kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: metadefender-menlo-ingress
spec:
  tls:
  - secretName: metadefender-menlo-secret-tls
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: metadefender-menlo-service
          servicePort: app-port
